--- a/trunk/configs/boards/HC5861/kernel-3.4.x.config
+++ b/trunk/configs/boards/HC5861/kernel-3.4.x.config
@@ -13,7 +13,7 @@ CONFIG_MIPS=y
 # CONFIG_RALINK_RT3883 is not set
 CONFIG_RALINK_MT7620=y
 # CONFIG_RALINK_MT7621 is not set
-CONFIG_RALINK_MT7628=y
+# CONFIG_RALINK_MT7628 is not set
 # CONFIG_MIPS_ALCHEMY is not set
 # CONFIG_AR7 is not set
 # CONFIG_ATH79 is not set
@@ -377,7 +377,7 @@ CONFIG_TRAD_SIGNALS=y
 # CONFIG_ARCH_SUSPEND_POSSIBLE is not set
 # CONFIG_PM_RUNTIME is not set
 CONFIG_NET=y
-CONFIG_SHORTCUT_FE=y
+# CONFIG_SHORTCUT_FE is not set
 
 #
 # Networking options
@@ -806,8 +806,9 @@ CONFIG_MTD_CFI_I2=y
 #
 CONFIG_MTD_RALINK=y
 CONFIG_MTD_SPI_RALINK=y
+# CONFIG_MTD_NAND_RALINK is not set
 CONFIG_MTD_SPI_FAST_CLOCK=y
-CONFIG_MTD_SPI_READ_NORM=y
+# CONFIG_MTD_SPI_READ_NORM is not set
 # CONFIG_MTD_SPI_READ_FAST is not set
 CONFIG_MTD_SPI_READ_DOR=y
 # CONFIG_MTD_SPI_READ_DIOR is not set
@@ -841,6 +842,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # CONFIG_BLK_DEV_NBD is not set
 # CONFIG_BLK_DEV_NVME is not set
 # CONFIG_BLK_DEV_SX8 is not set
+# CONFIG_BLK_DEV_UB is not set
 # CONFIG_BLK_DEV_RAM is not set
 # CONFIG_CDROM_PKTCDVD is not set
 # CONFIG_ATA_OVER_ETH is not set
@@ -857,6 +859,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # CONFIG_HP_ILO is not set
 # CONFIG_PCH_PHUB is not set
 # CONFIG_C2PORT is not set
+# CONFIG_IWMC3200TOP is not set
 
 #
 # EEPROM support
@@ -913,6 +916,7 @@ CONFIG_SCSI_MULTI_LUN=y
 # CONFIG_SCSI_OSD_INITIATOR is not set
 # CONFIG_ATA is not set
 # CONFIG_MD is not set
+# CONFIG_TARGET_CORE is not set
 # CONFIG_FUSION is not set
 
 #
@@ -1443,7 +1447,6 @@ CONFIG_MTK_MMC_CD_POLL=y
 # CONFIG_MEMSTICK is not set
 # CONFIG_NEW_LEDS is not set
 # CONFIG_ACCESSIBILITY is not set
-# CONFIG_INFINIBAND is not set
 CONFIG_RTC_LIB=y
 # CONFIG_RTC_CLASS is not set
 # CONFIG_DMADEVICES is not set
@@ -1692,7 +1695,7 @@ CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
-CONFIG_CRYPTO_RNG=y
+# CONFIG_CRYPTO_RNG is not set
 CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
@@ -1715,7 +1718,7 @@ CONFIG_CRYPTO_WORKQUEUE=y
 #
 # Block modes
 #
-CONFIG_CRYPTO_CBC=y
+# CONFIG_CRYPTO_CBC is not set
 # CONFIG_CRYPTO_CTR is not set
 # CONFIG_CRYPTO_CTS is not set
 CONFIG_CRYPTO_ECB=y
@@ -1751,7 +1754,7 @@ CONFIG_CRYPTO_SHA1=y
 #
 # Ciphers
 #
-CONFIG_CRYPTO_AES=y
+# CONFIG_CRYPTO_AES is not set
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
@@ -1780,10 +1783,7 @@ CONFIG_CRYPTO_DES=m
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
-CONFIG_CRYPTO_HW=y
-CONFIG_CRYPTO_DEV_LINUX=m
-CONFIG_CRYPTO_DEV_MTK_AES=m
-# CONFIG_CRYPTO_DEV_HIFN_795X is not set
+# CONFIG_CRYPTO_HW is not set
 # CONFIG_BINARY_PRINTF is not set
 
 #
