--- a/trunk/configs/boards/HC5861/kernel-3.4.x.config
+++ b/trunk/configs/boards/HC5861/kernel-3.4.x.config
@@ -59,6 +59,10 @@ CONFIG_RALINK_MT7620=y
 # CONFIG_NLM_XLR_BOARD is not set
 # CONFIG_NLM_XLP_BOARD is not set
 CONFIG_MT7620_ASIC=y
+CONFIG_PCIE_PORT0=y
+CONFIG_PCIE_PORT1=y
+CONFIG_PCIE_PORT2=y
+CONFIG_PCIE_PERST_ONLY=y
 # CONFIG_RALINK_MT7620_PLL600 is not set
 # CONFIG_RALINK_SYSTICK_COUNTER is not set
 # CONFIG_RT2880_DRAM_16M is not set
@@ -246,6 +250,7 @@ CONFIG_TINY=y
 CONFIG_MAX_SWAPFILES_SHIFT=0
 CONFIG_MAX_USER_RT_PRIO=100
 CONFIG_PCI_QUIRKS=y
+CONFIG_PCI_SDHC=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_SLAB=y
 # CONFIG_SLUB is not set
@@ -460,10 +465,10 @@ CONFIG_NETFILTER_NETLINK=m
 # CONFIG_NETFILTER_NETLINK_QUEUE is not set
 # CONFIG_NETFILTER_NETLINK_LOG is not set
 CONFIG_NF_CONNTRACK=y
+CONFIG_NF_CONNTRACK_CHAIN_EVENTS=y
 CONFIG_NF_CONNTRACK_MARK=y
 CONFIG_NF_CONNTRACK_PROCFS=y
 # CONFIG_NF_CONNTRACK_EVENTS is not set
-# CONFIG_NF_CONNTRACK_CHAIN_EVENTS is not set
 # CONFIG_NF_CONNTRACK_TIMEOUT is not set
 # CONFIG_NF_CONNTRACK_TIMESTAMP is not set
 # CONFIG_NF_CT_PROTO_DCCP is not set
@@ -814,9 +819,9 @@ CONFIG_MTD_SPI_READ_DOR=y
 # CONFIG_MTD_SPI_READ_DIOR is not set
 # CONFIG_RT2880_FLASH_4M is not set
 # CONFIG_RT2880_FLASH_8M is not set
-CONFIG_RT2880_FLASH_16M=y
+# CONFIG_RT2880_FLASH_16M is not set
 # CONFIG_RT2880_FLASH_32M is not set
-# CONFIG_RT2880_FLASH_AUTO is not set
+CONFIG_RT2880_FLASH_AUTO=y
 CONFIG_RT2880_MTD_PHYSMAP_START=0x1C000000
 CONFIG_RT2880_MTD_PHYSMAP_LEN=0x1000000
 CONFIG_RT2880_MTD_PHYSMAP_BUSWIDTH=2
@@ -854,18 +859,19 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # CONFIG_PHANTOM is not set
 # CONFIG_INTEL_MID_PTI is not set
 # CONFIG_SGI_IOC4 is not set
-# CONFIG_TIFM_CORE is not set
+CONFIG_TIFM_CORE=y
+CONFIG_TIFM_7XX1=y
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_HP_ILO is not set
 # CONFIG_PCH_PHUB is not set
 # CONFIG_C2PORT is not set
-# CONFIG_IWMC3200TOP is not set
 
 #
 # EEPROM support
 #
 # CONFIG_EEPROM_93CX6 is not set
 # CONFIG_CB710_CORE is not set
+# CONFIG_IWMC3200TOP is not set
 
 #
 # Texas Instruments shared transport line discipline
@@ -1263,7 +1269,8 @@ CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 #
 CONFIG_USB_DEVICEFS=y
 CONFIG_USB_DEVICE_CLASS=y
-# CONFIG_USB_DYNAMIC_MINORS is not set
+CONFIG_USB_DYNAMIC_MINORS=y
+# CONFIG_USB_WUSB is not set
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_MON is not set
@@ -1290,6 +1297,9 @@ CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 # CONFIG_USB_UHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
+# CONFIG_USB_WHCI_HCD is not set
+# CONFIG_USB_HWA_HCD is not set
+
 
 #
 # USB Device Class drivers
@@ -1414,39 +1424,47 @@ CONFIG_USB_SERIAL_OPTION=m
 #
 # OTG and related infrastructure
 #
-# CONFIG_NOP_USB_XCEIV is not set
-# CONFIG_UWB is not set
-# CONFIG_MMC is not set
+CONFIG_UWB=y
+CONFIG_UWB_HWA=n
+CONFIG_UWB_WHCI=n
+CONFIG_NOP_USB_XCEIV=y
+CONFIG_MMC=y
+CONFIG_MMC_DEBUG=n
+CONFIG_MMC_RESPOPCODE=y
+CONFIG_MMC_UNSAFE_RESUME=y
+CONFIG_MMC_CLKGATE=y
+#
+# MMC/SD/SDIO Card Drivers
+#
+CONFIG_MMC_BLOCK=y
+CONFIG_MMC_BLOCK_MINORS=8
+CONFIG_MMC_BLOCK_BOUNCE=y
+CONFIG_MMC_CORE=y
+CONFIG_SDIO_UART=y
+CONFIG_MMC_TEST=y
+#
+#
+# MMC/SD/SDIO Host Controller Drivers
+#
+CONFIG_MMC_SDHCI=y
+CONFIG_MMC_SDHCI_PCI=y
+CONFIG_MMC_RICOH_MMC=y
+CONFIG_MMC_SDHCI_PLTFM=y
+CONFIG_MMC_TIFM_SD=y
+CONFIG_MMC_CB710=n
+CONFIG_MMC_CB710_DEBUG=n
+CONFIG_MTK_MMC=y
+CONFIG_RTC_LIB=y
+# CONFIG_MMC_VIA_SDMMC is not set
+# CONFIG_MMC_VUB300 is not set
+# CONFIG_MMC_USHC is not set
+CONFIG_MTK_MMC=m
+CONFIG_MTK_AEE_KDUMP=y
+CONFIG_MTK_MMC_CD_POLL=y
 # CONFIG_MEMSTICK is not set
 # CONFIG_NEW_LEDS is not set
 # CONFIG_ACCESSIBILITY is not set
 # CONFIG_INFINIBAND is not set
-CONFIG_RTC_LIB=y
-# CONFIG_RTC_CLASS is not set
-# CONFIG_DMADEVICES is not set
-# CONFIG_AUXDISPLAY is not set
-# CONFIG_UIO is not set
-
-#
-# MMC/SD/SDIO Card Drivers
-#
-CONFIG_MMC_BLOCK=m
-CONFIG_MMC_BLOCK_MINORS=8
-CONFIG_MMC_BLOCK_BOUNCE=y
-# CONFIG_SDIO_UART is not set
-# CONFIG_MMC_TEST is not set
-
-#
-# MMC/SD/SDIO Host Controller Drivers
-#
-# CONFIG_MMC_SDHCI is not set
-CONFIG_MTK_MMC=m
-CONFIG_MTK_AEE_KDUMP=y
-CONFIG_MTK_MMC_CD_POLL=y
-# CONFIG_MTK_MMC_EMMC_8BIT is not set
-# CONFIG_MEMSTICK is not set
-# CONFIG_NEW_LEDS is not set
-# CONFIG_ACCESSIBILITY is not set
 CONFIG_RTC_LIB=y
 # CONFIG_RTC_CLASS is not set
 # CONFIG_DMADEVICES is not set
@@ -1995,8 +2013,8 @@ CONFIG_MT76X2_AP_EXTERNAL_PA_EXTERNAL_LNA=y
 # Wireless drivers common configs
 #
 # CONFIG_RT_SINGLE_SKU is not set
-CONFIG_RT_MAX_CLIENTS=40
 # CONFIG_RT_BAND_STEERING is not set
+CONFIG_RT_MAX_CLIENTS=40
 # CONFIG_RT_DOT11R_FT is not set
 # CONFIG_RT_DOT11K_RRM is not set
 # CONFIG_RT_80211N_DRAFT3 is not set
@@ -2048,6 +2066,10 @@ CONFIG_RA_HW_NAT_IPV6=y
 # CONFIG_RA_HW_NAT_PCI is not set
 CONFIG_RA_HW_NAT_WIFI=y
 # CONFIG_RA_HW_NAT_DEBUG is not set
+
+#
+# Ralink HW Crypto
+#
 
 #
 # Ralink Peripheral Devices
